--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>index.html</title>
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
-        <!-- <link rel="stylesheet" href="css/snake.css" type="text/css"> -->
 
     </head>
     <body>
@@ -41,7 +40,7 @@
     <script type="text/javascript" charset="utf-8" src="js/lodash.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/dict.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/supersnake.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/snake.js"></script>
 
 
     </body>
