--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no" />
         
         <title>index.html</title>
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
+
+        <script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/lodash.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/dict.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/snake.js"></script>
+        <script type="text/javascript" charset="utf-8">
+        <!--
+        $(document).ready(function() {
+            var snake = new snakegame("snake-board");
+        });
+        -->
+        </script>
 
     </head>
     <body>
@@ -14,13 +28,18 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span9">
-                    <canvas id="snake-board" height="600" width="800"></canvas>
+                    <canvas id="snake-board"></canvas>
                 </div>
                 <div class="span3">
                     <h5>Гра у змійку</h5>
                     <div id="help" class="alert fade in">
                         <button type="button" class="close" data-dismiss="alert">×</button>
-                        <strong>Вітаю гравця.</strong> Це модифікація відомої гри &laquo;змійка&raquo;. Тобі треба не тільки вирастити якомога довшу змію, але й збирати замість яблук букви, та сполучати їх у слова. Кожна зібрана буква поміщується у чергу що ти бачиш нижче. Якщо змія виходить за межі ігрового майданчика, кусає саму себе чи накопичує більш ніж 20 букв у черзі &mdash; гра припиняється. Кожна зібрана буква дає тобі 1 очко. Кожне слово дає по 10 очок за букву. Керувати треба стрілочками на клавіатурі. <code>Space</code> надає прискорення. Якщо тобі все зрозуміло й ти готова чи готовий до гри &mdash; просто закрий це повідомлення.
+                        <p><strong>Вітаю гравця.</strong> Це модифікація відомої гри &laquo;змійка&raquo;. Тобі треба не тільки вирастити якомога довшу змію, але й збирати замість яблук букви, та сполучати їх у слова. Кожна зібрана буква поміщується у чергу що ти бачиш нижче. Якщо змія виходить за межі ігрового майданчика, кусає саму себе чи накопичує більш ніж 20 букв у черзі &mdash; гра припиняється. Кожна зібрана буква дає тобі 1 очко. Кожне слово дає по 10 очок за букву. Керувати треба стрілочками на клавіатурі. <code>Space</code> надає прискорення. </p>
+
+                        <p>Користувачі, що запустили гру на пристрої з сенсорним екраном можуть змінювати напрям змійки торкаючись лівої або правої половини екрану.</p>
+
+                        <p>Якщо тобі все зрозуміло й ти готова чи готовий до гри &mdash; просто закрий це повідомлення.</p>
+                        <button class="btn btn-primary btn-block" data-dismiss="alert">До гри!</button>
                     </div>
                     <div id="snake-words" class="well">
                     </div>
@@ -36,12 +55,6 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/lodash.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/dict.js"></script>
-    <script type="text/javascript" charset="utf-8" src="js/snake.js"></script>
-
 
     </body>
 </html>    
