--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/lodash.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/controller.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/dict.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/snake.js"></script>
         <script type="text/javascript" charset="utf-8">
