--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" charset="utf-8" src="js/lodash.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/dict.js"></script>
-        <script type="text/javascript" charset="utf-8" src="js/snake.js?v=5"></script>
+        <script type="text/javascript" charset="utf-8" src="js/snake.js?v=6"></script>
         <script type="text/javascript" charset="utf-8">
         <!--
         $(document).ready(function() {
@@ -45,14 +45,8 @@
     <canvas id="snake-board"></canvas>
 
     <div class="controls">
-        <div id="snake-words" class="well">
-        </div>
-        <div id="snake-letters" class="well">
-            <span class="badge badge-info" title="Це не баг, це - жарт">N</span>
-            <span class="badge badge-info" title="Це не баг, це - жарт">U</span>
-            <span class="badge badge-info" title="Це не баг, це - жарт">L</span>
-            <span class="badge badge-info" title="Це не баг, це - жарт">L</span>
-        </div>
+        <div id="snake-words" class="well"></div>
+        <div id="snake-letters" class="well"></div>
         <div id="snake-info" class="well">
         </div>
     </div>
