--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <canvas id="snake-board"></canvas>
 
-    <div class="controls">
+    <div id="controls">
         <div id="snake-words" class="well"></div>
         <div id="snake-letters" class="well"></div>
         <div id="snake-info" class="well">
