--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <canvas id="snake-board"></canvas>
 
     <div id="statistics" style="position: absolute"></div>
-    <div id="snake-words"></div>
-    <div id="snake-letters"><span class="badge">12</span><span class="badge">C</span></div>
+    <div id="words">www</div>
+    <div id="letters"><span class="badge">12</span><span class="badge">C</span></div>
 
     </body>
 </html>    
